# porter

./: .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  __main__.py  pyproject.toml  requirements.txt  setup.py
porter/: __main__.py  cli.py  config.py  exceptions.py  log.py  utils.py
porter/backends/: base.py  rediscache.py  redisqueue.py
porter/dbproviders/mongo/: __init__.py
porter/dbproviders/mysql/: __init__.py  base.py  dbapi.py
porter/reader/: __init__.py  base.py  filereader.py  jsonreader.py  mongoreader.py  mysqlreader.py
porter/templates/: csv.yaml  file.yaml  json.yaml  mongo.yaml  mysql.yaml
templates/: csv.yaml  file.yaml  json.yaml  mongo.yaml  mysql.yaml
templates/data/: MOCK_DATA.csv  MOCK_DATA.json
tests/: test_backends.py
