[tool.poetry]
name = "porter"
version = "0.1.0"
description = ""
authors = ["Zhiwei Wang <noparking188@gmail.com>"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.poetry.dependencies]
python = "^3.8"
pymysql = "^0.9.3"
click = "^7.1"
redis = "^3.5"
requests = "^2.23"
poyo = "^0.5.0"

[tool.poetry.dev-dependencies]
ipython = "^7.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
